--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   http:
   flutter_bloc: ^6.0.1
   equatable: ^1.2.3
+  flutter_sparkline: ^0.1.0
+  flutter_circular_chart: ^0.1.0
+  flutter_staggered_grid_view: ^0.3.2
   #-------------------------------
 dev_dependencies:
   flutter_test:
